--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,11 @@
 
 paparazzi.sublime-workspace
 
+# Visual Studio Code project files
+
+.vscode/
+
+
 # JetBrains (PyCharm, etc) IDE project files
 .idea
 
