--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ paparazzi.sublime-workspace
 
 # Visual Studio Code project files
 
-.vscode/
+/.vscode
 
 
 # JetBrains (PyCharm, etc) IDE project files
