--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,8 @@
     "[python]": {
         "editor.tabSize": 4,
     },
+    "files.associations": {
+        "deque": "c",
+        "vector": "c"
+    },
 }
